# llm-gateway

./: .dockerignore  .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs  logging.rs
common/src/schemas/: chat.rs  mod.rs  model.rs
docker/: Dockerfile  Dockerfile.client  Dockerfile.server
server/: Cargo.toml
server/src/: lib.rs  logging.rs  main.rs  manager.rs  server.rs
server/src/middlewares/: auth.rs
server/src/routes/: chat.rs  healthz.rs  mod.rs  models.rs  ws.rs
