[workspace]
members = [ "server", "client", "common"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Ming Yang <vivym@live.com>"]
repository = "https://github.com/vivym/llm-gateway"
edition = "2021"

[workspace.dependencies]
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive", "env"] }
dotenvy = "0.15.7"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "sync", "macros", "signal", "parking_lot"] }
vergen = { version = "8.3.1", features = ["build", "git", "gitcl"] }
init-tracing-opentelemetry = { version = "0.18.1", features = ["opentelemetry-otlp"] }
opentelemetry = "0.23.0"
opentelemetry-otlp = "0.16.0"
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.24.0"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
serde_repr = "0.1.19"
thiserror = "1.0.61"
futures = "0.3.30"
utoipa = { version = "4.2.3", features = ["axum_extras", "repr"] }
num_cpus = "1.16.0"
mimalloc = "0.1.43"

[profile.release]
incremental = false
lto = true
opt-level = 3
debug = true
panic = "abort"

[profile.release-opt]
inherits = "release"
debug = false
incremental = false
codegen-units = 1

[profile.dev]
opt-level = 1
