[package]
name = "llm-gateway-client"
description = "LLM Gateway Client"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
clap.workspace = true
dotenvy.workspace = true
tokio.workspace = true
tokio-tungstenite = "0.23.1"
tracing.workspace = true
futures.workspace = true
reqwest = { version = "0.12.5", features = ["json"] }
serde_json.workspace = true
thiserror.workspace = true
reqwest-eventsource = "0.6.0"
chrono.workspace = true
common = { path = "../common" }
num_cpus.workspace = true
mimalloc.workspace = true
tungstenite = "0.23.0"
opentelemetry.workspace = true

[build-dependencies]
vergen.workspace = true
