[package]
name = "common"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
init-tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
