[package]
name = "llm-gateway-server"
description = "LLM Gateway Server"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
async-channel = "2.3.1"
async-stream = "0.3.5"
axum = { version = "0.7.5", features = ["json", "ws"] }
axum-tracing-opentelemetry = "0.18.1"
clap.workspace = true
dashmap = "6.0.1"
dotenvy.workspace = true
futures.workspace = true
init-tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http = { version = "0.5.2", features = ["cors"] }
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
streamunordered = "0.5.3"
chrono.workspace = true
common = { path = "../common" }
rand = "0.8.5"
num_cpus.workspace = true
mimalloc.workspace = true
metrics-exporter-prometheus = "0.15.1"
metrics = "0.23.0"

[build-dependencies]
vergen.workspace = true
